fix: h2 align-center

--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,7 @@ section + section {
 }
 .section-title {
     margin-bottom: 4.8rem;
+    text-align: center;
 }
 /* ------------------ 字體階層組件 (Typography Tokens) ------------------ */
 
